--- a/assets/scss/partials/_contact.scss
+++ b/assets/scss/partials/_contact.scss
@@ -1,5 +1,9 @@
 section#contact {
     background: linear-gradient(135deg, var(--color-primary-dark), var(--color-primary-light));
+    clip-path: polygon(0% 10%,
+            100% 0%,
+            100% 90%,
+            0% 100%);
 
     .contact-left {
         color: var(--color-white);
@@ -78,7 +82,7 @@ section#contact {
         .map {
             position: absolute;
             background-color: var(--color-white);
-            height: 45rem;
+            height: 5rem;
             padding-top: 5.3rem;
             top: 0;
             width: 100%;
@@ -89,17 +93,21 @@ section#contact {
                 font-size: 2.25rem;
                 font-weight: bold;
                 color: var(--color-primary-dark);
+                opacity: 0;
+
             }
 
             iframe {
                 width: 100%;
                 height: 58%;
                 box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+                opacity: 0;
             }
         }
 
         .active {
-            opacity: 1;
+            opacity: 1 !important;
+            height: 45rem;
         }
 
         .head-text {
@@ -113,6 +121,7 @@ section#contact {
                 font-size: 4rem;
                 font-weight: bold;
             }
+
         }
 
         .contact-info {
